--- a/src/Sandbox/wwwroot/views/fm-fund-gallery-view.html
+++ b/src/Sandbox/wwwroot/views/fm-fund-gallery-view.html
@@ -1,4 +1,4 @@
-﻿<section class="container-fluid section-padding fm-fund-gallery">
+<section class="container-fluid section-padding fm-fund-gallery">
 
   <!-- fm-search-button
   <div class="row col-xs-12 col-lg-10 col-lg-offset-1">
