Minor style tweaks

--- a/src/Sandbox/client/src/components/directives/fm-navbar-directive/fm-navbar-style.scss
+++ b/src/Sandbox/client/src/components/directives/fm-navbar-directive/fm-navbar-style.scss
@@ -37,6 +37,10 @@
             display: inline;
             width: 100%;
           }
+
+          .glyphicon {
+            font-size: 1.5rem;
+          }
         }
       }
     }
