--- a/src/Sandbox/client/src/components/directives/fm-navbar-directive/fm-navbar-view.html
+++ b/src/Sandbox/client/src/components/directives/fm-navbar-directive/fm-navbar-view.html
@@ -1,8 +1,8 @@
 ﻿<div class="fm-navbar animated fadeInDownBig">
   <nav>
     <ul>
+      <li><a href="" ng-click="openModal()"><span class="glyphicon glyphicon-search"></span></a></li>
       <li ng-repeat="link in navbarlinks"><a ui-sref-active="fm-navbar-active" ui-sref="{{link.url}}">{{link.name}}</a></li>
-      <li><a href="" ng-click="openModal()">Sök</a></li>
       <!--<li><a ng-if="isAuthenticated()" href="" ng-click="logOut()">Logga ut</a></li>
       <li><a ng-if="!isAuthenticated()" ui-sref-active="fm-navbar-active" ui-sref="Skapa Konto">Skapa Konto</a></li>-->
     </ul>
