--- a/src/Sandbox/wwwroot/views/fm-fund-gallery-view.html
+++ b/src/Sandbox/wwwroot/views/fm-fund-gallery-view.html
@@ -1,11 +1,11 @@
 <section class="container-fluid section-padding fm-fund-gallery">
 
-  <!-- fm-search-button
-  <div class="row col-xs-12 col-lg-10 col-lg-offset-1">
-    <div class="fm-fund-serach-button">
-      <span class="glyphicon glyphicon-search"></span>
+  <div class="row">
+    <div class="col-xs-12 col-sm-10 col-sm-offset-1">
+      <h2 class="text-center">Fonder</h2>
+      <p class="text-center">Alohamora wand elf parchment, Wingardium Leviosa hippogriff, house dementors betrayal.</p>
     </div>
-  </div> fm-search-button:end -->
+  </div>
 
   <div class="fm-fund-button-bar">
     <button ng-click="showCard = true; showTable1 = false; showTable2 = false;" class="fm-button"> Visa "Cards"</button>
