--- a/src/Sandbox/client/src/components/directives/fm-bulletin-slider-directive/fm-bulletin-slider-style.scss
+++ b/src/Sandbox/client/src/components/directives/fm-bulletin-slider-directive/fm-bulletin-slider-style.scss
@@ -15,7 +15,11 @@
       color: $color-white;
       margin: 0 auto;
       padding: 0;
-      font-size: 2.5rem;
+      font-size: $font-size-base;
+
+      @media(min-width: $screen-sm) {
+        font-size: $font-size-h4;
+      }
     }
   }
 }
