--- a/src/Sandbox/client/src/components/directives/fm-navbar-directive/fm-navbar-view.html
+++ b/src/Sandbox/client/src/components/directives/fm-navbar-directive/fm-navbar-view.html
@@ -12,6 +12,8 @@
 <!-- fm-modal -->
 <div id="fm-fund-modal" class="fm-fund-modal">
 
+  <span class="mega-ultra-icon glyphicon glyphicon-search"></span>
+
   <div ng-click="closeModal()" class="fm-fund-modal-close-button animated">
     <span></span>
     <span></span>
