--- a/src/Sandbox/client/src/scss/base_imports/variable_imports/_color-variables.scss
+++ b/src/Sandbox/client/src/scss/base_imports/variable_imports/_color-variables.scss
@@ -21,9 +21,9 @@ $color-light-grey-shade: shade($color-light-grey, 5);
 
 $color-dark-grey: #303E4C;
 $color-dark-grey-highlight: tint($color-dark-grey, 15);
-$color-dark-grey-shade: shade($color-dark-grey, 20);
+$color-dark-grey-shade: shade($color-dark-grey, 25);
 
 // Text Colours
-$color-text-primary: #AFA9A9;
+$color-text-primary: #898484;
 $color-text-primary-highlight: tint($color-text-primary, 40);
 $color-text-primary-shade: shade($color-text-primary, 20);
