--- a/src/Sandbox/client/src/components/directives/fm-footer-directive/fm-footer-view.html
+++ b/src/Sandbox/client/src/components/directives/fm-footer-directive/fm-footer-view.html
@@ -1,4 +1,4 @@
-﻿<section class="fm-footer section-padding">
+﻿<!--<section class="fm-footer section-padding">
   <h2 class="text-center fm-form-title">Kontakta oss</h2>
   <div class="container">
     <div class="row">
@@ -16,4 +16,67 @@
       </form>
     </div>
   </div>
+</section>-->
+
+
+<section class="fm-footer">
+  <div class="container-fluid section-padding">
+    <div class="row">
+
+      <div class="col-xs-12 col-sm-10 col-sm-offset-1">
+
+        <div class="fm-footer-list col-xs-12 col-md-6">
+          <p class="fm-footer-heading">Frågor och svar</p>
+
+          <ul>
+            <li><span class="glyphicon glyphicon-triangle-right"></span>Var hittar jag mitt årsbesked?</li>
+            <li><span class="glyphicon glyphicon-triangle-right"></span>Kan jag bli kund om jag bor utomlands?</li>
+            <li><span class="glyphicon glyphicon-triangle-right"></span>Kan jag öppna ett konto åt mina barn eller barnbarn?</li>
+            <li><span class="glyphicon glyphicon-triangle-right"></span>Varför behöver jag en autogirokoppling?</li>
+            <li><span class="glyphicon glyphicon-triangle-right"></span>Vad är minimibelopp?</li>
+          </ul>
+
+          <p style="margin-top: 4.8rem;" class="fm-footer-heading">Öppettider</p>
+
+          <ul>
+            <li>Måndag-Fredag: <span style="margin-left: 10rem;" class="text-semibold">09.00-12.00 & 13.00-17.00</span></li>
+          </ul>
+
+        </div>
+
+        <form class="fm-contact-form col-xs-12 col-md-6" action="" method="">
+          <p class="fm-footer-heading">Kontakta kundservice</p>
+
+          <div class="form-input-group">
+            <input type="text" class="form-control" name="name" placeholder="Namn">
+          </div>
+          <div class="form-input-group">
+            <input type="email" class="form-control" name="email" placeholder="E-post">
+          </div>
+          <div class="form-group">
+            <textarea class="form-control" rows="5" name="message" placeholder="Hur kan vi hjälpa till?"></textarea>
+          </div>
+          <button type="submit" class="fm-button button-light">Skicka</button>
+        </form>
+
+      </div>
+    </div>
+  </div>
+
+
+  <div class="fm-footer-address-bar">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-xs-12 col-sm-10 col-sm-offset-1">
+          <div class="fm-footer-address-bar-wrapper">
+            <p><span class="glyphicon glyphicon-earphone"></span>08 - 432 221 54</p>
+            <p><span class="glyphicon glyphicon-map-marker"></span>Incognitogatan 42, 234 45 Stockholm</p>
+            <p><span class="glyphicon glyphicon-envelope"></span>info@incognito.se</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </section>
+
