--- a/src/Sandbox/client/src/components/directives/fm-navbar-directive/fm-navbar-style.scss
+++ b/src/Sandbox/client/src/components/directives/fm-navbar-directive/fm-navbar-style.scss
@@ -56,7 +56,7 @@
   left: 0;
   right: 0;
   margin: auto;
-  background-color: rgba(0,0,0,0.9);
+  background-color: rgba(42,187,174,1);
   z-index: 100000;
   visibility: hidden;
   opacity: 0;
@@ -67,6 +67,28 @@
     visibility: visible;
     opacity: 1;
     transition: opacity 300ms;
+  }
+
+  .mega-ultra-icon {
+    color: $color-white;
+    position: absolute;
+    margin: auto;
+    top: -10%;
+    left: -10%;
+    //right: 0;
+    //bottom: 0;
+    width: 25%;
+    height: 25%;
+    font-size: 70rem;
+    opacity: 0.1;
+
+    @media(min-width: $screen-sm) {
+      font-size: 90rem;
+    }
+
+    @media(min-width: $screen-md) {
+      font-size: 115rem;
+    }
   }
 
   .fm-fund-modal-close-button {
